--- a/src/menubar/popup.html
+++ b/src/menubar/popup.html
@@ -60,10 +60,10 @@
             </td>
           </tr>
           <tr>
-            <td class="noselect">YouTube - WIP</td>
+            <td class="noselect">YouTube</td>
             <td class="right">
               <label class="switch">
-                <input class="toggleYouTube" type="checkbox" disabled>
+                <input class="toggleYouTube" type="checkbox">
                 <span class="slider round"></span>
               </label>
             </td>
