--- a/src/menubar/popup.html
+++ b/src/menubar/popup.html
@@ -14,47 +14,35 @@
   <script>if (window.module) module = window.module;</script>
   <script>
     const { remote, webContents } = require('electron');
-    const userData = new Config({
-      name: 'userData'
-    })
     function quitApp() {
       remote.app.exit(0);
     }
 
     var shell = require('electron').shell;
-    //open links externally by default
+
+    //open links in external browser by default
     $(document).on('click', 'a[href^="http"]', function (event) {
       event.preventDefault();
       shell.openExternal(this.href);
     });
-
-    $(function () {
-      setInterval(function () {
-        console.log(userData.get('data'))
-        $('#songCover').attr('src', userData.get('data').currentSongCover)
-        $('#songTitle').html(userData.get('data').currentSongTitle)
-        $('#songAuthor').html(userData.get('data').currentSongAuthor)
-      }, 1000)
-    })
-
   </script>
 
 </head>
 
 <body>
   <div id="header">
-    <img id="songCover">
-    <div id="songTitleWrapper">
-      <h1 id="songTitle"></h1>
-    </div>
-    <h2 id="songAuthor"></h2>
+    <img src="icon@2x.png">
+    <h1 class="noselect">YT Presence</h1>
+    <a title="Quit" onclick="quitApp()">
+      <i class="fas fa-sign-out-alt"></i>
+    </a>
   </div>
   <div id="content">
     <div id="heading">
       <h1 class="noselect">Options</h1>
     </div>
     <div id="optionsTable">
-      <table>
+      <table class="options">
         <thead>
           <tr>
             <th></th>
