Final? preparations for V1.0 (Mac OS side)

--- a/src/preferences.html
+++ b/src/preferences.html
@@ -10,8 +10,8 @@
 
 <body>
   <div id="header">
-    <img id="logo" src="assets/images/icon@2x.png" draggable="false">
-    <h1 id="title">Preferences</h1>
+    <img src="assets/images/logo.png">
+    <h1>YT Presence</h1>
   </div>
   <div id="content">
     <table id="options">
