--- a/src/windows/about.html
+++ b/src/windows/about.html
@@ -2,8 +2,8 @@
 
 <head>
   <title>About YouTube Presence</title>
-  <link rel="stylesheet" href="assets/css/reset.css">
-  <link rel="stylesheet" href="assets/css/about.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/about.css">
 </head>
 
 <body>
@@ -39,9 +39,9 @@
   <button id="supportMe">Support me!</button>
   <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
 
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
-  <script src="assets/js/anime.min.js"></script>
-  <script src="assets/js/preferences.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/anime.min.js"></script>
+  <script src="js/preferences.js"></script>
 
   <script>if (window.module) module = window.module;</script>
   <script>
