--- a/src/windows/update.html
+++ b/src/windows/update.html
@@ -2,12 +2,12 @@
 
 <head>
   <title>YT Presence &bull; Update avaiable!</title>
-  <link rel="stylesheet" href="assets/css/reset.css">
-  <link rel="stylesheet" href="assets/css/update.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/update.css">
   <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
 
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
-  <script src="assets/js/showdown.min.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/showdown.min.js"></script>
 
   <script>if (window.module) module = window.module;</script>
   <script>
@@ -21,7 +21,7 @@
 
 <body>
   <div id="header">
-    <img src="assets/images/logo.png">
+    <img draggable="false" src="../assets/images/logo.png">
     <h1>YT Presence</h1>
   </div>
   <div id="content">
