--- a/src/windows/preferences.html
+++ b/src/windows/preferences.html
@@ -2,15 +2,14 @@
 
 <head>
   <title>Preferences &bull; YT Presence</title>
-  <link rel="icon" type="image/png" href="assets/images/icon@2x.png">
-  <link href="assets/css/reset.css" rel="stylesheet">
-  <link href="assets/css/preferences.css" rel="stylesheet">
-  <link href="assets/css/inputs.css" rel="stylesheet">
+  <link href="css/reset.css" rel="stylesheet">
+  <link href="css/preferences.css" rel="stylesheet">
+  <link href="css/inputs.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="header">
-    <img src="assets/images/logo.png">
+    <img draggable="false" src="../assets/images/logo.png">
     <h1>YT Presence</h1>
   </div>
   <div id="content">
@@ -76,8 +75,8 @@
 
   <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
 
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
-  <script src="assets/js/preferences.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/preferences.js"></script>
 
   <script>if (window.module) module = window.module;</script>
   <script>
