--- a/src/windows/update.html
+++ b/src/windows/update.html
@@ -4,19 +4,7 @@
   <title>YT Presence &bull; Update avaiable!</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/update.css">
-  <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
-
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/showdown.min.js"></script>
-
-  <script>if (window.module) module = window.module;</script>
-  <script>
-    var converter = new showdown.Converter()
-
-    const ipc = require('electron').ipcRenderer;
-    const remote = require('electron').remote
-
-  </script>
+  <link href="css/ripple.css" rel="stylesheet">
 </head>
 
 <body>
@@ -28,9 +16,29 @@
     <p id="description"></p>
   </div>
   <div id="footer">
-    <button id="update">Update</button>
-    <button id="later">Later</button>
+    <button id="update">
+      Update
+      <div class="rippleJS"></div>
+    </button>
+    <button id="later">
+      Later
+      <div class="rippleJS"></div>
+    </button>
   </div>
+  <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
+
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/showdown.min.js"></script>
+  <script src="js/ripple.min.js"></script>
+
+  <script>if (window.module) module = window.module;</script>
+  <script>
+    var converter = new showdown.Converter()
+
+    const ipc = require('electron').ipcRenderer;
+    const remote = require('electron').remote
+
+  </script>
   <script>
     var shell = require('electron').shell;
     ipc.on('updateData', (event, message) => {
