Twitch Support and small improvements in Netflix.js

--- a/src/windows/preferences.html
+++ b/src/windows/preferences.html
@@ -58,6 +58,15 @@
             </label>
           </td>
         </tr>
+        <tr class="twitchToggle">
+          <td>Twitch</td>
+          <td>
+            <label class="switch">
+              <input class="toggleTwitch" type="checkbox">
+              <span class="slider round"></span>
+            </label>
+          </td>
+        </tr>
         <tr>
           <td>Launch on system startup</td>
           <td>
