--- a/src/windows/preferences.html
+++ b/src/windows/preferences.html
@@ -67,6 +67,15 @@
             </label>
           </td>
         </tr>
+        <tr class="soundcloudToggle">
+          <td>SoundCloud</td>
+          <td>
+            <label class="switch">
+              <input class="toggleSoundCloud" type="checkbox">
+              <span class="slider round"></span>
+            </label>
+          </td>
+        </tr>
         <tr>
           <td>Launch on system startup</td>
           <td>
