--- a/Extension/update.html
+++ b/Extension/update.html
@@ -7,8 +7,8 @@
 <body>
   <h1>New in this release:</h1>
   <ul>
-    <li>+ Changelog</li>
-    <li>+ Install Note</li>
+    <li>Changelog</li>
+    <li>Install Note</li>
   </ul>
   <h1>Fixed in this release:</h1>
   <ul>
