--- a/Extension/updated.html
+++ b/Extension/updated.html
@@ -12,17 +12,13 @@
     <h1 id="version"></h1>
   </div>
   <div id="content">
-    <h1 id="installedThanks"></h1>
-    <h2 id="installedApp"></h2>
-    <h3 id="installedNo"></h3>
-    <ul>
-      <li id="installedStepApp"></li>
-      <li id="installedWaitInstalled"></li>
-      <li id="installedMayWarning"></li>
-      <li id="installedAppAutostart"></li>
+    <h1 id="updatedYTPUpdated"></h1>
+    <h2 id="updatedWhatsNew"></h2>
+    <ul id="updatedWhatsNewList">
     </ul>
-    <h3 id="installedYes"></h3>
-    <p id="installedStart"></p>
+    <h2 id="updatedWhatChanged"></h2>
+    <ul id="updatedWhatChangedList">
+    </ul>
     <h2 id="installedSupportMe"></h2>
     <a href="https://www.patreon.com/bePatron?u=4610890" target="_blank" data-patreon-widget-type="become-patron-button"><img
         src="images/patreonBTN.png" draggable="false" height="50px" alt="Support me on Patreon!"></a>
@@ -30,7 +26,7 @@
       <img src="images/discord-logo.svg" height="50px" draggable="false" alt="Join my Discord!">
     </a>
   </div>
-  <script src="js/installed.js"></script>
+  <script src="js/updated.js"></script>
 </body>
 
 </html>
