change stuff to premid
not sure if i broke something but it was working when i tested it (also i didnt bother with macos icons)

--- a/src/windows/about.html
+++ b/src/windows/about.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>About YouTube Presence</title>
+  <title>About PreMiD</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/about.css">
   <link href="css/ripple.css" rel="stylesheet">
