--- a/src/windows/preferences.html
+++ b/src/windows/preferences.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Preferences &bull; YT Presence</title>
+  <title>Preferences &bull; PreMiD</title>
   <link href="css/reset.css" rel="stylesheet">
   <link href="css/preferences.css" rel="stylesheet">
   <link href="css/inputs.css" rel="stylesheet">
