--- a/src/windows/update.html
+++ b/src/windows/update.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>YT Presence &bull; Update avaiable!</title>
+  <title>PreMiD &bull; Update avaiable!</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/update.css">
   <link href="css/ripple.css" rel="stylesheet">
@@ -10,7 +10,7 @@
 <body>
   <div id="header">
     <img draggable="false" src="../assets/images/logo.png">
-    <h1>YT Presence</h1>
+    <h1>PreMiD Presence</h1>
   </div>
   <div id="content">
     <p id="description"></p>
