--- a/Extension/installed.html
+++ b/Extension/installed.html
@@ -1,11 +1,36 @@
 <html>
 
 <head>
-  <title>Thanks for using YT Presence!</title>
+  <title>PreMiD</title>
+  <link rel="stylesheet" href="css/tab.css">
 </head>
 
 <body>
-
+  <div id="header">
+    <img id="icon" src="icon.png" draggable="false">
+    <h1 id="title">PreMiD</h1>
+    <h1 id="version"></h1>
+  </div>
+  <div id="content">
+    <h1 id="installedThanks"></h1>
+    <h2 id="installedApp"></h2>
+    <h3 id="installedNo"></h3>
+    <ul>
+      <li id="installedStepApp"></li>
+      <li id="installedWaitInstalled"></li>
+      <li id="installedMayWarning"></li>
+      <li id="installedAppAutostart"></li>
+    </ul>
+    <h3 id="installedYes"></h3>
+    <p id="installedStart"></p>
+    <h2 id="installedSupportMe"></h2>
+    <a href="https://www.patreon.com/bePatron?u=4610890" target="_blank" data-patreon-widget-type="become-patron-button"><img
+        src="images/patreonBTN.png" draggable="false" height="50px" alt="Support me on Patreon!"></a>
+    <a href="https://discord.gg/Kw7WaYn" target="_blank" title="Join our Discord!">
+      <img src="images/discord-logo.svg" height="50px" draggable="false" alt="Join my Discord!">
+    </a>
+  </div>
+  <script src="js/installed.js"></script>
 </body>
 
 </html>
