Rewrites here and there

--- a/src/windows/preferences.html
+++ b/src/windows/preferences.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Preferences &bull; YT Presence</title>
+  <title>Preferences &bull; PreMiD</title>
   <link href="css/reset.css" rel="stylesheet">
   <link href="css/preferences.css" rel="stylesheet">
   <link href="css/inputs.css" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
   <div id="header">
     <img draggable="false" src="../assets/images/logo.png">
-    <h1>YT Presence</h1>
+    <h1>PreMiD</h1>
   </div>
   <div id="content">
     <table id="options">
