Basically everything for 1.2 :P

--- a/Extension/html/tabs/installed.html
+++ b/Extension/html/tabs/installed.html
@@ -2,12 +2,12 @@
 
 <head>
   <title>PreMiD</title>
-  <link rel="stylesheet" href="css/tab.css">
+  <link rel="stylesheet" href="../../css/tab.css">
 </head>
 
 <body>
   <div id="header">
-    <img id="icon" src="icon.png" draggable="false">
+    <img id="icon" src="../../icon.png" draggable="false">
     <h1 id="title">PreMiD</h1>
     <h1 id="version"></h1>
   </div>
@@ -25,12 +25,12 @@
     <p id="installedStart"></p>
     <h2 id="installedSupportMe"></h2>
     <a href="https://www.patreon.com/bePatron?u=4610890" target="_blank" data-patreon-widget-type="become-patron-button"><img
-        src="images/patreonBTN.png" draggable="false" height="50px" alt="Support me on Patreon!"></a>
+        src="../../images/patreonBTN.png" draggable="false" height="50px" alt="Support me on Patreon!"></a>
     <a href="https://discord.gg/Kw7WaYn" target="_blank" title="Join our Discord!">
-      <img src="images/discord-logo.svg" height="50px" draggable="false" alt="Join my Discord!">
+      <img src="../../images/discord-logo.svg" height="50px" draggable="false" alt="Join my Discord!">
     </a>
   </div>
-  <script src="js/installed.js"></script>
+  <script src="../../js/installed.js"></script>
 </body>
 
 </html>
