--- a/Extension/html/popup/popup.html
+++ b/Extension/html/popup/popup.html
@@ -3,32 +3,26 @@
 <head>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="popup.css">
+  <link rel="stylesheet" href="../../css/popup.css">
 </head>
 
 <body>
   <div id="header">
-    <h1>PreMiD</h1>
-    <h1>V1.1.1</h1>
+    <h1 class="Pname"></h1>
+    <h1 class="Pversion"></h1>
   </div>
   <div id="content">
-    <div id="panel" class="about">
-      <i id="icon" class="fas fa-user"></i>
-      <h1 id="name">About</h1>
-    </div>
-    <div id="panel" class="feedback">
-      <i id="icon" class="fas fa-comments"></i>
-      <h1 id="name">Feedback</h1>
-    </div>
     <div id="panel" class="github">
       <i id="icon" class="fab fa-github"></i>
       <h1 id="name">GitHub</h1>
     </div>
     <div id="panel" class="options">
       <i id="icon" class="fas fa-cog"></i>
-      <h1 id="name">Options</h1>
+      <h1 id="name" class="Poptions"></h1>
     </div>
   </div>
+  <script src="../../js/util/jquery-3.3.1.min.js"></script>
+  <script src="../../js/popup.js"></script>
 </body>
 
 </html>
