--- a/Extension/html/popup/popup.html
+++ b/Extension/html/popup/popup.html
@@ -1,28 +1,34 @@
 <html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../../css/popup.css" />
+  </head>
 
-<head>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="../../css/popup.css">
-</head>
-
-<body>
-  <div id="header">
-    <h1 class="Pname"></h1>
-    <h1 class="Pversion"></h1>
-  </div>
-  <div id="content">
-    <div id="panel" class="options">
-      <i id="icon" class="fas fa-cog"></i>
-      <h1 id="name" class="Poptions"></h1>
+  <body>
+    <div id="header">
+      <h1 class="Pname"></h1>
+      <h1 class="Pversion"></h1>
     </div>
-    <div id="panel" class="github">
-      <i id="icon" class="fab fa-github"></i>
-      <h1 id="name">GitHub</h1>
+    <div id="content">
+      <div id="panel" class="options">
+        <i id="icon" class="fas fa-cog"></i>
+        <h1 id="name" class="Poptions"></h1>
+      </div>
+      <div id="panel" class="donate">
+        <i id="icon" class="fas fa-donate"></i>
+        <h1 id="name">Donate</h1>
+      </div>
+      <div id="panel" class="github">
+        <i id="icon" class="fab fa-github"></i>
+        <h1 id="name">GitHub</h1>
+      </div>
     </div>
-  </div>
-  <script src="../../js/util/jquery-3.3.1.min.js"></script>
-  <script src="../../js/popup.js"></script>
-</body>
-
+    <script src="../../js/util/jquery-3.3.1.min.js"></script>
+    <script src="../../js/popup.js"></script>
+  </body>
 </html>
