--- a/Extension/html/popup/popup.html
+++ b/Extension/html/popup/popup.html
@@ -16,6 +16,7 @@
     />
 
     <script src="../../js/util/jquery-3.3.1.min.js"></script>
+    <script src="../../js/util/custom-i18n.js"></script>
     <script src="../../js/options.js"></script>
     <script src="../../js/popup.js"></script>
   </head>
