--- a/Extension/html/popup/popup.html
+++ b/Extension/html/popup/popup.html
@@ -18,7 +18,9 @@
     <script src="../../js/util/jquery-3.3.1.min.js"></script>
     <script src="../../js/util/custom-i18n.js"></script>
     <script src="../../js/options.js"></script>
+    <script src="../../js/credits.js"></script>
     <script src="../../js/popup.js"></script>
+    <script src="../../js/util/fitty.min.js"></script>
   </head>
 
   <body>
@@ -178,7 +180,10 @@
                 </div>
               </div>
             </div>
-            <div id="credits" class="col s12 tabContent">Test 2</div>
+            <div id="credits" class="col s12 tabContent">
+              <table>
+              </table>
+            </div>
           </div>
         </div>
       </div>
