--- a/Extension/html/tabs/installed.html
+++ b/Extension/html/tabs/installed.html
@@ -1,36 +1,63 @@
 <html>
+  <head>
+    <title>PreMiD</title>
+    <link rel="stylesheet" href="../../css/tab.css" />
+    <!-- Import materialize.css -->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="../../css/materialize.min.css"
+      media="screen,projection"
+    />
+    <script src="../../js/util/jquery-3.3.1.min.js"></script>
+    <script src="../../js/util/custom-i18n.js"></script>
+  </head>
 
-<head>
-  <title>PreMiD</title>
-  <link rel="stylesheet" href="../../css/tab.css">
-</head>
-
-<body>
-  <div id="header">
-    <img id="icon" src="../../icon.png" draggable="false">
-    <h1 id="title">PreMiD</h1>
-    <h1 id="version"></h1>
-  </div>
-  <div id="content">
-    <h1 id="installedThanks"></h1>
-    <h2 id="installedApp"></h2>
-    <h3 id="installedNo"></h3>
-    <ul>
-      <li id="installedStepApp"></li>
-      <li id="installedWaitInstalled"></li>
-      <li id="installedMayWarning"></li>
-      <li id="installedAppAutostart"></li>
-    </ul>
-    <h3 id="installedYes"></h3>
-    <p id="installedStart"></p>
-    <h2 id="installedSupportMe"></h2>
-    <a href="https://www.patreon.com/bePatron?u=4610890" target="_blank" data-patreon-widget-type="become-patron-button"><img
-        src="../../images/patreonBTN.png" draggable="false" height="50px" alt="Support me on Patreon!"></a>
-    <a href="https://discord.gg/Kw7WaYn" target="_blank" title="Join our Discord!">
-      <img src="../../images/discord-logo.svg" height="50px" draggable="false" alt="Join my Discord!">
-    </a>
-  </div>
-  <script src="../../js/installed.js"></script>
-</body>
-
+  <body>
+    <div id="pMiDHeader"><img src="../../icon.png" draggable="false" /></div>
+    <div id="content">
+      <div class="card-panel">
+        <h1 id="pMiDHeading">Thanks for installing PreMiD</h1>
+        <h2>Did you install the application yet?</h2>
+        <h3>No? Follow these simple instructions:</h3>
+        <ol>
+          <li>
+            <p>
+              Download the latest version of PreMiD from my
+              <a href="https://github.com/Timeraa/PreMiD/releases/latest"
+                >Github repository</a
+              >
+            </p>
+          </li>
+          <li>
+            <p>
+              Run the installer and wait until the installation is completed
+            </p>
+          </li>
+          <li>
+            <p>
+              The application should start automatically after installation,
+              confirm this by looking at your Menubar (Mac OS) or Taskbar
+              (Windows)
+            </p>
+          </li>
+        </ol>
+        <h3>Yes? You are ready to go!</h3>
+        <p>Let's go then! Start by using one of our supported services</p>
+        <div id="buttonWrapper">
+          <a class="close waves-effect btn">Let's Start</a>
+          <a class="getSupport waves-effect btn">Get Support</a>
+        </div>
+        <p class="smallCenter">
+          Like this project? Star it on
+          <a href="https://github.com/Timeraa/PreMiD">GitHub</a>!
+        </p>
+      </div>
+    </div>
+    <script src="../../js/installed.js"></script>
+    <script
+      type="text/javascript"
+      src="../../js/util/materialize.min.js"
+    ></script>
+  </body>
 </html>
