--- a/Extension/html/popup.html
+++ b/Extension/html/popup.html
@@ -27,10 +27,10 @@
     <div id="header"><img draggable="false" src="../../icon.png" /></div>
       <ul class="tabs headerTabs">
         <li class="tab col s3">
-          <a draggable="false" class="active waves-effect Poptions" href="#options"></a>
+          <a draggable="false" class="active waves-effect waves-discord Poptions" href="#options"></a>
         </li>
         <li class="tab col s3">
-          <a draggable="false" class="waves-effect Pcredits" href="#credits"></a>
+          <a draggable="false" class="waves-effect waves-discord Pcredits" href="#credits"></a>
         </li>
       </ul>
         <div id="tabContent">
@@ -181,8 +181,17 @@
               </div>
             </div>
             <div id="credits" class="col s12 tabContent">
-              <table>
-              </table>
+                <div class="row center-align credits-panel">
+                  <div class="credits_avatar">
+                    <img style="width: 40px; border-radius: 60px;" src="https://pbs.twimg.com/profile_images/532662364613525504/GN559Lfb_400x400.png">
+                  </div>
+                  <div class="credits_text">
+                    <h6>Voknehzyr</h6>
+                    <p>Developer</p>
+                  </div>
+                </div>
+                <!-- <div id="credits_container" class="row center-align">
+                </div> -->
             </div>
           </div>
         </div>
