:wrench: UI reworks
* Switches has been reworked.
* Small improvements in styles.
* Updated dark style for notification.

--- a/Extension/html/popup.html
+++ b/Extension/html/popup.html
@@ -19,8 +19,8 @@
     <script src="../../js/util/custom-i18n.js"></script>
     <script src="../../js/options.js"></script>
     <script src="../../js/credits.js"></script>
-    <script src="../../js/popup.js"></script>
     <script src="../../js/util/fitty.min.js"></script>
+    <script src="../../js/popup.js"></script>
   </head>
 
   <body>
@@ -180,22 +180,12 @@
                 </div>
               </div>
             </div>
-            <div id="credits" class="col s12 tabContent">
-                <div class="row center-align credits-panel">
-                  <div class="credits_avatar">
-                    <img style="width: 40px; border-radius: 60px;" src="https://pbs.twimg.com/profile_images/532662364613525504/GN559Lfb_400x400.png">
-                  </div>
-                  <div class="credits_text">
-                    <h6>Voknehzyr</h6>
-                    <p>Developer</p>
-                  </div>
-                </div>
+            <div id="credits" class="tabContent">
+              <div class="credits_container">
+              </div>
+
                 <!-- <div id="credits_container" class="row center-align">
                 </div> -->
-            </div>
-          </div>
-        </div>
-      </div>
     <script
       type="text/javascript"
       src="../../js/util/materialize.min.js"
