Finishing touches for V1.2.50

--- a/Extension/html/popup.html
+++ b/Extension/html/popup.html
@@ -146,6 +146,16 @@
                         </td>
                       </tr>
                       <tr>
+                        <td><h5 id="pMiDOption">Rabb.it</h5></td>
+                        <td>
+                          <div class="switch">
+                            <label>
+                              <input type="checkbox" class="toggleRabbit" /> <span class="lever"></span>
+                            </label>
+                          </div>
+                        </td>
+                      </tr>
+                      <tr>
                         <td><h5 id="pMiDOption">KissAnime</h5></td>
                         <td>
                           <div class="switch">
@@ -175,17 +185,45 @@
                           </div>
                         </td>
                       </tr>
+                      <tr>
+                        <td><h5 id="pMiDOption">Anime4You</h5></td>
+                        <td>
+                          <div class="switch">
+                            <label>
+                              <input type="checkbox" class="toggleAnime4You" /> <span class="lever"></span>
+                            </label>
+                          </div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><h5 id="pMiDOption">HentaiGasm</h5></td>
+                        <td>
+                          <div class="switch">
+                            <label>
+                              <input type="checkbox" class="toggleHentaiGasm" /> <span class="lever"></span>
+                            </label>
+                          </div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><h5 id="pMiDOption">HentaiHaven</h5></td>
+                        <td>
+                          <div class="switch">
+                            <label>
+                              <input type="checkbox" class="toggleHentaiHaven" /> <span class="lever"></span>
+                            </label>
+                          </div>
+                        </td>
+                      </tr>
                     </table>
                   </div>
                 </div>
               </div>
             </div>
             <div id="credits" class="tabContent">
-              <div class="credits_container">
-              </div>
-
-                <!-- <div id="credits_container" class="row center-align">
-                </div> -->
+              <div class="credits_container"></div>
+            </div>
+          </div>
     <script
       type="text/javascript"
       src="../../js/util/materialize.min.js"
